--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="header">
-        Home
-
+        <h2>Home</h2>
     </div>
 
     <div class="main">
@@ -17,5 +17,13 @@
 
     <div class="agenda">
     </div>
+
+    <div class="footer">
+
+    </div>
+
+    <h1>Animals</h1>
+    <img src="https://cdn.pixabay.com/photo/2020/03/05/09/25/gecko-4903884_1280.jpg" width="650px" height="510x"
+
 </body>
 </html>
