final notg done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     </div>
 
     <h1>Animals</h1>
-    <img src="https://cdn.pixabay.com/photo/2020/03/05/09/25/gecko-4903884_1280.jpg" width="650px" height="510x"
+    <div class="card">
+        <img src="https://cdn.pixabay.com/photo/2016/11/14/03/56/tiger-1822535_640.jpg/" width="650px" height="510x">
+        <p> The world has many fascinating animals across the world! There are differnent types of species, colors, and more! For the people who want to know exactly how many animals on the planet right now, it is impossible to state the exact number of individual animals on the planet, as the number is constantly changing and the vast majority are tiny, undescribed creatures. This means that there are more and more animals or even some we people haven't even discoverd yet.</p>
+    </div>
+    
 
 </body>
 </html>
