--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <h1>Animals</h1>
-    <div class="card">
+    <div class="Rotating Image">
         <img src="https://cdn.pixabay.com/photo/2022/04/06/03/11/ant-7114721_1280.jpg" width="33%" height="500px">
         <img src="https://cdn.pixabay.com/photo/2025/09/21/12/12/crocodile-9846352_1280.jpg" width="33%" height="500px">
         <img src="https://cdn.pixabay.com/photo/2017/07/24/19/57/tiger-2535888_1280.jpg" width="33%" height="500px">
