--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     <h1>Animals</h1>
     <div class="Rotating Image">
-        <img src="https://cdn.pixabay.com/photo/2022/04/06/03/11/ant-7114721_1280.jpg" width="33%" height="500px">
+        <img src="https://cdn.pixabay.com/photo/2022/09/30/12/56/cat-7489398_1280.jpg" width="33%" height="500px">
         <img src="https://cdn.pixabay.com/photo/2025/09/21/12/12/crocodile-9846352_1280.jpg" width="33%" height="500px">
         <img src="https://cdn.pixabay.com/photo/2017/07/24/19/57/tiger-2535888_1280.jpg" width="33%" height="500px">
     </div> 
-        <p> The world has many fascinating animals across the world! There are differnent types of species, colors, and more! For the people who want to know exactly how many animals on the planet right now, it is impossible to state the exact number of individual animals on the planet, as the number is constantly changing and the vast majority are tiny, undescribed creatures. This means that there are more and more animals or even some we people haven't even discoverd yet.</p>
+        <p> The world has many fascinating animals across the world! There are differnent types of species, colors, and more! For the people who want to know exactly how many animals on the planet right now, it is impossible to state the exact number of individual animals on the planet, as the number is constantly changing and the vast majority are tiny, undescribed creatures. This means that there are more and more animals or even some we people haven't even discoverd yet.Animals are multicellular, eukaryotic organisms that comprise the biological kingdom Animalia. They are incredibly diverse, with an estimated 7.77 million species on Earth, ranging from microscopic organisms to the colossal blue whale. A key characteristic that sets most animals apart from plants and fungi is their ability to move voluntarily and their reliance on consuming organic material for energy.</p>
 
 
 </body>
