--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <div class="header">
-        <h2>Home</h2>
+        <a href="index.html"<h2>Home</h2></a>
     </div>
-
+    <div class="header">
+    <a href="Reptiles.html">Reptiles</a>
+</div>
+    <div class="header">
+    <a href="Mammals.html">Mammals</a>
+</div>
     <div class="main">
         <div class="member-list"></div>
     </div>
